# duckex

./: .gitignore  Cargo.toml  Makefile  README.md  flake.lock.license  flake.nix  mix.exs
config/: config.exs
lib/: duckex.ex  duckex_port.ex  error.ex  result.ex
lib/duckex/: error.ex  port.ex  protocol.ex  query.ex  result.ex
native/: Cargo.toml
native/duckex/: .gitignore  Cargo.toml
native/duckex/src/: cache.rs  main.rs
native/src/: main.rs
test/: duckex_test.exs  test_helper.exs
